keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/service: auth
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
    - name: http-management
      port: 9990
      protocol: TCP
      targetPort: http-management
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/service: auth
  sessionAffinity: None
  type: ClusterIP
